--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                         float: right;
                         background-color: rgba(255,165,0,0.7);
                         border-radius: 10px;
+                        overflow:auto;
+                        overflow-x: hidden;
                     }
                     #mobileNav{
                         width: 100%;
@@ -163,7 +165,16 @@
                         align-items: center;
                         justify-content: center;
                     }
-                    
+                    iframe{
+                        width: 100%;
+                        height: auto;
+                        border-radius: 10px;
+                        margin-bottom: 15px;
+                    }
+                    aside{
+                        margin: 15px;
+
+                    }
                 </style>
                 <div id="empty"></div>
                 <div class="l_header" id="header">
@@ -173,8 +184,8 @@
             
             <ul id="nav">
                 <a href="index.html"><li><p>HOME</p></li></a>
-                <a href="https://twitter.com/jajmsms"><li><p>Twitter</p></li></a>
-                <a href="https://www.youtube.com/channel/UCUfd7UkkVFS5FHaV7OScSZw"><li>YouTube</li></a>
+                <a href="https://twitter.com/hsjakkallavfhd"><li><p>Twitter</p></li></a>
+                <a href="https://youtu.be/mFPE77MK6Y4"><li>YouTube</li></a>
                 <a href="https://github.com/fjdkfhaefa/Gaming9/tree/main"><li><p>GitHub</p></li></a>
             </ul>
             <div class="wrapper">
@@ -242,7 +253,11 @@
                     </div>
                 </div>
                 <div class="l_sidebar">
-                    <aside>疲れて未実装ぉ</aside>
+                    <aside>疲れて未実装ぉ
+                        <iframe src="https://www.youtube.com/embed/z3u2PUamOEs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/mFPE77MK6Y4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BOYW_mCIvw8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </aside>
                 </div>
 
             </div><!--wrapper-->
