--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     </div>
                 </div>
                 <div class="l_sidebar">
-                    <aside>疲れて未実装ぉ
+                    <aside>チャンネル登録よろしくお願いします！
                         <iframe src="https://www.youtube.com/embed/z3u2PUamOEs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/mFPE77MK6Y4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/BOYW_mCIvw8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
