--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -117,7 +117,7 @@
         aside {
             display: flex;
             flex-direction: column;
-            align-items: flex-end;
+            align-items: center;
             padding: 10px;
             background-color: rgba(0, 0, 0, 0.7);
             margin-right: 0px;
