--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -79,6 +79,7 @@
             background-color: rgba(0, 0, 0, 0.5);
             border-radius: 10px;
             padding: 10px;
+            font-size: 150%;
         }
 
         .memoItem {
