--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -470,6 +470,7 @@ document.getElementById("textInput").addEventListener("input", function () {
     if(realTime == true){
         deleted = false
         reload()
+        saveMemo()
     }else{
         
     }
