--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -149,7 +149,7 @@
             flex-grow: 1;
             width: 100%;
             height: 200px;
-            background-color: rgba(0, 0, 0, 0.5);
+
         }
     
         /* テキストエリア */
@@ -246,13 +246,14 @@
 
 <script>
 
-    alert("二次転載禁止")
+    //alert("二次転載禁止")
     document.addEventListener('DOMContentLoaded', () => {
       const videoElement = document.getElementById('camera-preview');
 
       // カメラの起動
       navigator.mediaDevices.getUserMedia({ video: true })
         .then((stream) => {
+            document.getElementById("parent").style.backgroundColor = "rgba(0,0,0,0.5)";
           videoElement.srcObject = stream;
 
           // カメラのサイズを画面サイズに合わせる
@@ -267,8 +268,10 @@
           resizeCamera();
         })
         .catch((error) => {
+            document.getElementById("parent").style.backgroundColor = "black";
           console.error('カメラの起動に失敗しました: ', error);
-          alert("baka");
+          alert("camera Not found..");
+
         });
     });
     var hide = false
