--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -59,7 +59,7 @@
     </div>
     <footer>
         <div id="c">
-            <p>Copyright © 2023 ⑨な人PJT. All Rights Reserved.<br>DesighnWidth ChatGPT</p>
+            <p>CofeeRight ｃ 2023 木村東方技術. All Lights Reserved.<br>DesighnWidth ChatGPT</p>
         </div>
     </footer>
     <style>
