--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </style>
                 <div id="empty"></div>
                 <div class="l_header" id="header">
-                    <div>⑨な人PJT 活動状況</div>
+                    <div>開発状況</div>
                 </div>
             </header>
             
