--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             <a href="BingChatSpeech&txtAnimv1.1cGaming.html">
                                 <img src="https://user-images.githubusercontent.com/86725396/244706807-36ea7c83-572b-4fe9-a306-478a01f449f6.png">
                             </a>
-                            <figcaption>BingChatSpeech&txtAnimv1.1cGaming.html</figcaption>
+                            <figcaption>入力テキスト自動読み上げサイト</figcaption>
                         </figure>
                     </div>
                 </div>
