--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -441,7 +441,7 @@ function ini() {
                     memoNum++;
                     console.log(memoNum + "num22222222222222222222222222222222222222222222222222222222");
                 } else {
-                    //memoNum = 0;
+                    memoNum = 0;
                 }
                 console.log(memoLen + "len");
                 console.log(memoNum + "num");
