--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -768,8 +768,8 @@ document.addEventListener("keydown",function(event){
                 console.log(txtArray[j])
                 console.log(kugiriSu)
                 if (memoText.trim() === "") {
-                    alert("Please enter a memo before saving.");
-                    return;
+                    console.log("Please enter a memo before saving.");
+                    //return;
                 }
 
                 var timestamp = new Date().toLocaleString();
