--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -76,7 +76,8 @@
     <style>
         #timeInput{
             height: auto;
-            font-size: x-large;
+            font-size: 40px;
+            font-weight: bold;
         }
         .kino {
             /*xスクロールが出てきません*/
