--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -74,6 +74,10 @@
         </div>
     </footer>
     <style>
+        #pause{
+            width: 200px;
+            height: auto;
+        }
         #timeInput{
             height: auto;
             font-size: 40px;
