--- a/BingChatSpeech&txtAnimv1.1cGaming.html
+++ b/BingChatSpeech&txtAnimv1.1cGaming.html
@@ -434,7 +434,7 @@ speed = localStorage.getItem('speed');//speedの取得
 pitchNum = localStorage.getItem('pitchNum');
 delayJido = localStorage.getItem('delayJido');
 memoNum = localStorage.getItem('memoNum');
-alert(memoNum)
+//alert(memoNum)
 spmeter2.value = speed;
 _pitch.value = pitchNum;
 timeInput.value = delayJido;
